适配最新版本hugo v0.132.0

--- a/themes/mainroad/i18n/de.yaml
+++ b/themes/mainroad/i18n/de.yaml
@@ -25,7 +25,7 @@
 
 # Authorbox
 - id: authorbox_name
-  translation: Über {{ .Count }}
+  translation: Über {{ . }}
 
 # Sidebar
 - id: sidebar_warning
