--- a/themes/mainroad/i18n/en.yaml
+++ b/themes/mainroad/i18n/en.yaml
@@ -25,7 +25,7 @@
 
 # Authorbox
 - id: authorbox_name
-  translation: About {{ .Count }}
+  translation: About {{ . }}
 
 # Sidebar
 - id: sidebar_warning
