--- a/content/post/搭建.md
+++ b/content/post/搭建.md
@@ -1,10 +1,10 @@
 ---
-title: 个人网站
+title: "运维部署 · 机关篇"
 date: 2019-01-09
 tags:
-  - "个人网站"
+  - "运维部署 · 机关篇"
 categories:
-  - "工具"
+  - "运维部署 · 机关篇"
 menu: main # Optional, add page to a menu. Options: main, side, footer
 ---
 
