调整目录结构

--- a/content/编程语言/编程语言 · 剑法篇.md
+++ b/content/编程语言/编程语言 · 剑法篇.md
@@ -1,19 +1,18 @@
 ---
-title: "前端开发 · 画卷篇"
+title: "剑法篇"
 date: 2019-01-10T14:29:02+08:00
-description: "前端开发 · 画卷篇"
-thumbnail: "img/placeholder.jpg" # Optional, thumbnail
-lead: "Example lead - highlighted near the title"
+description: "编程语言 · 剑法篇"
+lead: "编程语言"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
 toc: true # Optional, enable Table of Contents for specific post
 mathjax: true # Optional, enable MathJax for specific post
 categories:
-  - "前端开发 · 画卷篇"
+  - "编程语言"
 tags:
-  - "前端开发 · 画卷篇"
+  - "编程语言"
   
-menu: side # Optional, add page to a menu. Options: main, side, footer
+menu: main # Optional, add page to a menu. Options: main, side, footer
 draft: true
 ---
 
