--- a/content/运维部署/运维部署 · 机关篇.md
+++ b/content/运维部署/运维部署 · 机关篇.md
@@ -1,22 +1,20 @@
 ---
-title: "编程语言 · 剑法篇"
+title: "机关篇"
 date: 2019-01-10T14:29:02+08:00
-description: "编程语言 · 剑法篇"
-thumbnail: "img/placeholder.jpg" # Optional, thumbnail
-lead: "Example lead - highlighted near the title"
+description: "运维部署 · 机关篇"
+lead: "运维部署"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
 toc: true # Optional, enable Table of Contents for specific post
 mathjax: true # Optional, enable MathJax for specific post
 categories:
-  - "编程语言 · 剑法篇"
+  - "运维部署"
 tags:
-  - "编程语言 · 剑法篇"
+  - "运维部署"
   
-menu: side # Optional, add page to a menu. Options: main, side, footer
+menu: main # Optional, add page to a menu. Options: main, side, footer
 draft: true
 ---
-
 # 卜陋专酱
 
 1.安装[Hugo](https://github.com/gohugoio/hugo/releases) 
