--- a/content/后端架构/后端架构 · 兵法篇.md
+++ b/content/后端架构/后端架构 · 兵法篇.md
@@ -1,19 +1,18 @@
 ---
-title: "后端架构 · 兵法篇"
+title: "兵法篇"
 date: 2019-01-10T14:29:02+08:00
 description: "后端架构 · 兵法篇"
-thumbnail: "img/placeholder.jpg" # Optional, thumbnail
-lead: "Example lead - highlighted near the title"
+lead: "后端架构"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
 toc: true # Optional, enable Table of Contents for specific post
 mathjax: true # Optional, enable MathJax for specific post
 categories:
-  - "后端架构 · 兵法篇"
+  - "后端架构"
 tags:
-  - "后端架构 · 兵法篇"
+  - "后端架构"
   
-menu: side # Optional, add page to a menu. Options: main, side, footer
+menu: main # Optional, add page to a menu. Options: main, side, footer
 draft: true
 ---
 
