--- a/content/工具效率/工具效率 · 法宝篇.md
+++ b/content/工具效率/工具效率 · 法宝篇.md
@@ -1,21 +1,21 @@
 ---
-title: "运维部署 · 机关篇"
+title: "法宝篇"
 date: 2019-01-10T14:29:02+08:00
-description: "运维部署 · 机关篇"
-thumbnail: "img/placeholder.jpg" # Optional, thumbnail
-lead: "Example lead - highlighted near the title"
+description: "工具效率 · 法宝篇"
+lead: "工具效率"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
 toc: true # Optional, enable Table of Contents for specific post
 mathjax: true # Optional, enable MathJax for specific post
 categories:
-  - "运维部署 · 机关篇"
+  - "工具效率"
 tags:
-  - "运维部署 · 机关篇"
+  - "工具效率"
   
-menu: side # Optional, add page to a menu. Options: main, side, footer
+menu: main # Optional, add page to a menu. Options: main, side, footer
 draft: true
 ---
+
 # 卜陋专酱
 
 1.安装[Hugo](https://github.com/gohugoio/hugo/releases) 
