--- a/content/开源文档/开源文档 · 典籍篇.md
+++ b/content/开源文档/开源文档 · 典籍篇.md
@@ -1,19 +1,18 @@
 ---
-title: "开源文档 · 典籍篇"
+title: "典籍篇"
 date: 2019-01-10T14:29:02+08:00
 description: "开源文档 · 典籍篇"
-thumbnail: "img/placeholder.jpg" # Optional, thumbnail
-lead: "Example lead - highlighted near the title"
+lead: "开源文档"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
 toc: true # Optional, enable Table of Contents for specific post
 mathjax: true # Optional, enable MathJax for specific post
 categories:
-  - "开源文档 · 典籍篇"
+  - "开源文档"
 tags:
-  - "开源文档 · 典籍篇"
+  - "开源文档"
   
-menu: side # Optional, add page to a menu. Options: main, side, footer
+menu: main # Optional, add page to a menu. Options: main, side, footer
 draft: true
 ---
 
