--- a/content/算法与数据结构/算法数据结构 · 棋谱篇.md
+++ b/content/算法与数据结构/算法数据结构 · 棋谱篇.md
@@ -1,19 +1,18 @@
 ---
-title: "算法数据结构 · 棋谱篇"
+title: "棋谱篇"
 date: 2019-01-10T14:29:02+08:00
 description: "算法数据结构 · 棋谱篇"
-thumbnail: "img/placeholder.jpg" # Optional, thumbnail
-lead: "Example lead - highlighted near the title"
+lead: "算法数据结构"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
 toc: true # Optional, enable Table of Contents for specific post
 mathjax: true # Optional, enable MathJax for specific post
 categories:
-  - "算法数据结构 · 棋谱篇"
+  - "算法数据结构"
 tags:
-  - "算法数据结构 · 棋谱篇"
+  - "算法数据结构"
   
-menu: side # Optional, add page to a menu. Options: main, side, footer
+menu: main # Optional, add page to a menu. Options: main, side, footer
 draft: true
 ---
 
