--- a/content/运维部署/运维部署 · 机关篇.md
+++ b/content/运维部署/运维部署 · 机关篇.md
@@ -12,10 +12,11 @@ categories:
 tags:
   - "运维部署"
   
-menu: main # Optional, add page to a menu. Options: main, side, footer
+menu: side # Optional, add page to a menu. Options: main, side, footer
 draft: true
 ---
 # 卜陋专酱
+[← 返回](../编程语言-汇总/)
 
 1.安装[Hugo](https://github.com/gohugoio/hugo/releases) 
 
