--- a/content/编程语言/编程语言-数据结构.md
+++ b/content/编程语言/编程语言-数据结构.md
@@ -2,7 +2,7 @@
 title: "剑法篇"
 date: 2022-07-23
 description: "C语言代码解码"
-lead: "编程语言"
+lead: "C语言-列表"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
 toc: false # Optional, enable Table of Contents for specific post
@@ -12,7 +12,6 @@ categories:
 tags:
   - "C"
   
-menu: side # Optional, add page to a menu. Options: main, side, footer
 draft: true
 ---
 [↩ 返回](../编程语言-汇总/)
