--- a/content/编程语言/编程语言-汇总.md
+++ b/content/编程语言/编程语言-汇总.md
@@ -10,7 +10,7 @@ mathjax: true # Optional, enable MathJax for specific post
 categories:
   - "编程语言"
 tags:
-  - "C"
+  - "编程语言"
   
 menu: main # Optional, add page to a menu. Options: main, side, footer
 draft: true
@@ -19,23 +19,24 @@ draft: true
 
 > 以江湖门派为纲，串联站内所有编程笔记。每个门派会收录对应语言的实战心法与案例，持续更新中。
 
-### 「C 古谱」· 底层乾坤，性能为王
-- <span style="color: var(--cinnabar);">「数据结构」</span>： [C 列表实战](/编程语言/编程语言-数据结构) —— 从指针到链表的演练记录。
-- 「代码解码」： [C 语言代码重构](/编程语言/编程语言-C语言代码解码) —— ASCII/HEX 混合报文拆解手记。
+### 🔧 「C 古谱」· 底层乾坤，性能为王
+#### <span style="color: var(--cinnabar);">📊 「数据结构」</span>： 
+- [C 列表实战](/编程语言/编程语言-数据结构) —— 从指针到链表的演练记录。
+- [C 语言代码重构](/编程语言/编程语言-C语言代码解码) —— ASCII/HEX 混合报文拆解手记。
 
-### 「Python 剑诀」· 化繁为简，以柔克刚
+### 🐍 「Python 剑诀」· 化繁为简，以柔克刚
 - 计划整理：快速原型、脚本自动化、数据处理常用套路。
 
-### 「Java 心经」· 重剑无锋，大巧不工
+### ☕ 「Java 心经」· 重剑无锋，大巧不工
 - 计划整理：企业级架构、并发与内存调优。
 
-### 「JavaScript 妙法」· 灵动变幻，万象归一
+### 🟨 「JavaScript 妙法」· 灵动变幻，万象归一
 - 计划整理：可视化组件、前端工程化心得。
 
-### 「Go 道术」· 大道至简，并发自然
+### 🚀 「Go 道术」· 大道至简，并发自然
 - 计划整理：goroutine 调度图谱、微服务脚手架。
 
-### 「Rust 玄功」· 内存无患，安全自在
+### 🦀 「Rust 玄功」· 内存无患，安全自在
 - 计划整理：所有权系统心法、零成本抽象笔记。
 
 > 如需补充新的「秘笈」，直接在对应语言目录下创建 Markdown 文件并在此处追加条目即可。
