--- a/content/算法数据结构/算法数据结构-棋谱篇.md
+++ b/content/算法数据结构/算法数据结构-棋谱篇.md
@@ -1,8 +1,8 @@
 ---
 title: "棋谱篇"
-date: 2022-07-23
+date: 2021-12-21
 description: "棋谱篇汇总"
-lead: "章节"
+lead: "万物皆结构，万法归算法"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
 toc: false # Optional, enable Table of Contents for specific post
