--- a/content/编程语言/编程语言-剑法篇.md
+++ b/content/编程语言/编程语言-剑法篇.md
@@ -2,7 +2,7 @@
 title: "剑法篇"
 date: 2021-12-21
 description: "C语言代码解码"
-lead: "编程语言"
+lead: "语言即思维，代码即哲学"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
 toc: false # Optional, enable Table of Contents for specific post
