添加新文档

--- a/content/前端开发/前端开发 -画卷篇.md
+++ b/content/前端开发/前端开发 -画卷篇.md
@@ -154,7 +154,7 @@ draft: true
 ##### 「JavaScript 性能」
 - [JS 执行优化](/前端开发/性能优化/JS性能) —— V8 优化、垃圾回收、异步编程
 - 计划：Worker 多线程、WASM 集成、算法优化
-
+- [事件循环](/前端开发/事件循环) —— V8 优化、垃圾回收、异步编程
 ---
 
 ### <span style="color: var(--cinnabar);">🎨 「可视化艺术」</span>
