--- a/content/工具效率/工具效率-法宝篇.md
+++ b/content/工具效率/工具效率-法宝篇.md
@@ -60,7 +60,7 @@ draft: true
 
 #### 🚀 「负载测试」
 ##### 「LoadRunner」
-- [LoadRunner 企业级应用](/工具效率/测试工具/LoadRunner高级) —— 协议选择、事务设计、资源监控
+- [LoadRunner 企业级应用](/工具效率/测试工具-LoadRunner高级) —— 协议选择、事务设计、资源监控
 - 计划：分析器深度使用、瓶颈定位技巧
 
 ##### 「性能监控」
