--- a/content/开源文档/开源文档-典籍篇.md
+++ b/content/开源文档/开源文档-典籍篇.md
@@ -55,6 +55,7 @@ draft: true
 - [开源文档金字塔](/开源文档/文档编撰/文档体系) —— 参考文档/教程/概念解析/FAQ
 - 计划：用户画像分析、内容策略、信息架构设计
 - 计划：多版本文档管理、多语言支持策略
+- [英语语法](/开源文档/英语语法) —— 解决查看文档，不解其意的痛点。
 
 ##### 「自动化文档」
 - [CI 集成文档生成](/开源文档/文档编撰/自动化文档) —— Javadoc/Sphinx/Doxygen 实战
