--- a/content/算法数据结构/算法数据结构-棋谱篇.md
+++ b/content/算法数据结构/算法数据结构-棋谱篇.md
@@ -50,6 +50,7 @@ draft: true
 #### <span style="color: var(--cinnabar);">🕸️ 「图论基石」</span>：
 
 ##### 「图的表示」：邻接矩阵与邻接表的抉择
+- [路线规划](/算法数据结构/数据结构篇-路线规划/) —— Grid-Based Route (Re-)Planning
 - 计划：稠密图与稀疏图的存储优化
 ---
 
@@ -117,7 +118,7 @@ draft: true
 
 ##### 「高频题目」：面试常考题型深度解析
 - 计划：每题多语言实现、多种解法对比
-- [C 趣味算法](/算法数据结构/算法数据结构-C语言趣味算法) —— 汉诺塔、百鸡百钱、常胜将军、约瑟夫环。
+- [C语言趣味算法](/算法数据结构/实战演练-C语言趣味算法) —— 汉诺塔、百鸡百钱、常胜将军、约瑟夫环。
 
 #### <span style="color: var(--cinnabar);">🏆 「竞赛算法」</span>：
 
