--- a/content/编程语言/编程语言-数据结构.md
+++ b/content/编程语言/编程语言-数据结构.md
@@ -14,7 +14,7 @@ tags:
   
 draft: true
 ---
-[↩ 返回](../编程语言-剑法篇/)
+[◀ 返回](/编程语言/编程语言-剑法篇/)
 
 ## 线性表
 
@@ -248,5 +248,6 @@ typedef struct _linklist {
 }CircleList;
 ```
 [\[具体代码可下载\]](https://download.csdn.net/download/weixin_40005552/15677918)
-[返回汇总](../编程语言-汇总/)
+---
+[◀ 返回](/编程语言/编程语言-剑法篇/)
 
