--- a/content/运维部署/运维部署-机关篇.md
+++ b/content/运维部署/运维部署-机关篇.md
@@ -14,7 +14,6 @@ tags:
   - "CI/CD"
   - "监控日志"
   - "云原生"
-menu: main
 draft: true
 ---
 
@@ -69,7 +68,8 @@ draft: true
 
 ##### 「Auto DevOps」
 - 计划：全自动流水线、K8s自动部署、监控集成
-
+#### 🚇 「内网穿透工具 」
+- [ngrok内网网穿透](/运维部署/基础设施-ngrok内网网穿透/) —— 自助访问设备
 #### ⚡ 「云原生 CI/CD」
 ##### 「GitHub Actions」
 - [Actions 工作流设计](/运维部署/CI-CD/GitHub-Actions) —— 复合动作、矩阵构建、自托管Runner
