--- a/content/前端开发/事件循环.md
+++ b/content/前端开发/事件循环.md
@@ -139,7 +139,7 @@ function a() {
 
 ```
 
-![image](https://files.mdnice.com/user/58546/e1f8b352-495e-4f5d-a796-7d64217e34f2.png)
+![image](/images/前端开发-事件循环图5.webp)
 浏览器还有其他的队列
 
 ```bash
