--- a/content/运维部署/运维部署-机关篇.md
+++ b/content/运维部署/运维部署-机关篇.md
@@ -15,6 +15,7 @@ tags:
   - "监控日志"
   - "云原生"
 draft: true
+menu: main # Optional, add page to a menu. Options: main, side, footer
 ---
 
 ## 「运维部署机关篇」
