--- a/content/后端架构/后端架构-兵法篇.md
+++ b/content/后端架构/后端架构-兵法篇.md
@@ -125,6 +125,8 @@ draft: true
 
 ##### 「PostgreSQL 特性」
 - [PostgreSQL 高级特性](/后端架构/数据库/PostgreSQL) —— 窗口函数、JSONB类型、地理数据
+- [PostgreSQL 安装](/后端架构/数据库-PostgreSql安装/) 
+- [PostgreSQL 组成结构](/后端架构/数据库-PostgreSQL组成结构/)
 - 计划：逻辑复制、分区表、扩展插件
 
 #### 🎭 「NoSQL 选型」
