--- a/content/后端架构/后端架构-兵法篇.md
+++ b/content/后端架构/后端架构-兵法篇.md
@@ -124,7 +124,7 @@ draft: true
 - 计划：参数调优、主从同步、高可用方案
 
 ##### 「PostgreSQL 特性」
-- [PostgreSQL 高级特性](/后端架构/数据库/PostgreSQL) —— 窗口函数、JSONB类型、地理数据
+- [PostgreSQL 高级特性](/后端架构/数据库/PostgreSQL/) —— 窗口函数、JSONB类型、地理数据
 - [PostgreSQL 安装](/后端架构/数据库-PostgreSql安装/) 
 - [PostgreSQL 组成结构](/后端架构/数据库-PostgreSQL组成结构/)
 - 计划：逻辑复制、分区表、扩展插件
