--- a/content/编程语言/编程语言-剑法篇.md
+++ b/content/编程语言/编程语言-剑法篇.md
@@ -29,8 +29,8 @@ draft: true
 
 ### ☕ 「Java 心经」· 重剑无锋，大巧不工
 - 计划整理：企业级架构、并发与内存调优。
-- [设计模式理解](/编程语言/编程语言-设计模式)
-- [JAVA测验](/编程语言/编程语言-JAVA综合测试)
+- [设计模式理解](/编程语言/编程语言-设计模式/)
+- [JAVA测验](/编程语言/编程语言-JAVA综合测试/)
 
 ### 🟨 「JavaScript 妙法」· 灵动变幻，万象归一
 - 计划整理：可视化组件、前端工程化心得。
