--- a/content/算法数据结构/算法数据结构-棋谱篇.md
+++ b/content/算法数据结构/算法数据结构-棋谱篇.md
@@ -12,7 +12,9 @@ categories:
 tags:
   - "算法数据结构"
   
-menu: main # Optional, add page to a menu. Options: main, side, footer
+menu: 
+  main:
+    weight: 3 # Optional, add page to a menu. Options: main, side, footer
 draft: true
 ---
 ## 「算法与数据结构真解」
