--- a/content/编程语言/编程语言-在线答题示例.md
+++ b/content/编程语言/编程语言-在线答题示例.md
@@ -1,8 +1,8 @@
 ---
-title: "在线答题示例"
-date: 2025-01-01
+title: "在线答题"
+date: 2025-12-11
 description: "展示如何使用交互式答题模板"
-lead: "交互式在线答题系统使用示例"
+lead: "交互式在线答题系统"
 disable_comments: false
 authorbox: true
 toc: false
@@ -10,16 +10,13 @@ mathjax: false
 categories:
   - "编程语言"
 tags:
-  - "示例"
   - "答题系统"
 draft: true
+menu:
+  main:
+    weight: 9
 ---
 
-## 使用说明
-
-本文档展示了如何使用交互式答题模板。在 Markdown 中使用 `quiz` 和 `quizoption` shortcode 来创建在线答题题目。
-
-## 示例 1：Java 基础题
 
 {{< quiz id="quiz-1" question="Local Variable 的描述，哪项正确？" correct="C" >}}
 {{< quizoption value="A" explanation="错误：局部变量不能使用访问修饰符（public/private/protected），它们只在方法或代码块内部可见。" >}}
@@ -36,8 +33,6 @@ draft: true
 {{< /quizoption >}}
 {{< /quiz >}}
 
-## 示例 2：异常处理题
-
 {{< quiz id="quiz-2" question="`try-catch-finally` 中执行 `System.exit(0)`，`finally` 会执行吗？" correct="A" >}}
 {{< quizoption value="A" explanation="正确：`System.exit(0)` 会直接终止 JVM 进程，所有后续代码（包括 finally 块）都不会执行。这是唯一能让 finally 不执行的情况。" >}}
 不会，`System.exit(0)` 直接终止 JVM，`finally` 被跳过。
@@ -52,8 +47,6 @@ draft: true
 取决于 `catch` 是否捕获 `RuntimeException`。
 {{< /quizoption >}}
 {{< /quiz >}}
-
-## 示例 3：集合框架题
 
 {{< quiz id="quiz-3" question="以下哪一个集合在并发场景下性能优于 `Hashtable`？" correct="B" >}}
 {{< quizoption value="A" explanation="错误：TreeMap 不是线程安全的，且性能在并发场景下不如 ConcurrentHashMap。" >}}
@@ -70,7 +63,6 @@ draft: true
 {{< /quizoption >}}
 {{< /quiz >}}
 
-## 使用方法
 {{< quiz id="quiz-springai-01" question="在 Spring AI 中集成阿里云通义千问（Qwen）模型时，应使用哪个官方平台提供的 API Key？" correct="C" >}}
 {{< quizoption value="A" explanation="阿里云 RAM（Resource Access Management）用于管理用户权限，不直接提供大模型 API Key。">}}阿里云 RAM AccessKey{{< /quizoption >}}
 {{< quizoption value="B" explanation="百炼（Model Studio）是阿里云的模型训练平台，但 Qwen 的推理 API 由 DashScope 提供。">}}阿里云百炼（Model Studio）{{< /quizoption >}}
@@ -99,9 +91,8 @@ draft: true
 {{< quizoption value="D" explanation="正确。Qwen 系列模型（如 qwen-max、qwen-turbo）均可通过 DashScope API 调用。">}}支持的模型包括 qwen-turbo、qwen-plus 和 qwen-max{{< /quizoption >}}
 {{< /quiz >}}
 
-### 基本语法
 
-```markdown
+
 {{< quiz id="唯一ID" question="题目内容" correct="正确答案（A/B/C/D）" >}}
 {{< quizoption value="A" explanation="选项A的解释" >}}
 选项A的内容
@@ -122,33 +113,3 @@ draft: true
 {{< quizoption value="C" explanation="正确。DashScope（灵积）是阿里云官方提供 Qwen 等大模型 API 服务的平台，需在此创建 API Key。">}}阿里云 DashScope{{< /quizoption >}}
 {{< quizoption value="D" explanation="阿里云函数计算（FC）用于事件驱动计算，与大模型 API 无关。">}}阿里云函数计算（Function Compute）{{< /quizoption >}}
 {{< /quiz >}}
-
-```
-
-### 参数说明
-
-**quiz shortcode 参数：**
-- `id`：题目的唯一标识符（必需）
-- `question`：题目内容（必需）
-- `correct`：正确答案，值为 A、B、C 或 D（必需）
-
-**quizoption shortcode 参数：**
-- `value`：选项值，通常为 A、B、C 或 D（必需）
-- `explanation`：该选项的解释说明（可选，但建议提供）
-
-### 功能特性
-
-1. **提交答案**：选择答案后点击"提交答案"按钮，系统会判断对错并显示结果
-2. **查看答案**：直接点击"查看答案"按钮，可以查看正确答案和所有选项的解释
-3. **重置**：点击"重置"按钮可以清除选择，重新答题
-4. **自动标记**：提交后会自动标记正确和错误的选项
-5. **详细解释**：显示选中选项和正确答案的解释说明
-
-### 注意事项
-
-- 每个题目的 `id` 必须唯一
-- `correct` 参数的值必须与某个 `quizoption` 的 `value` 匹配
-- 建议为每个选项提供 `explanation`，这样用户可以更好地理解知识点
-- 选项内容支持 Markdown 语法，可以使用代码、加粗等格式
-```
-```
