--- a/content/编程语言/编程语言-剑法篇.md
+++ b/content/编程语言/编程语言-剑法篇.md
@@ -12,7 +12,9 @@ categories:
 tags:
   - "编程语言"
   
-menu: main # Optional, add page to a menu. Options: main, side, footer
+menu: 
+  main:
+    weight: 1 # Optional, add page to a menu. Options: main, side, footer
 draft: true
 ---
 ## 「编程语言兵器谱」
