增加算法小说

--- a/content/算法数据结构/算法数据结构-棋谱篇.md
+++ b/content/算法数据结构/算法数据结构-棋谱篇.md
@@ -1,6 +1,6 @@
 ---
 title: "算法数据结构"
-date: 2025-11-21
+date: 2025-12-16
 description: "棋谱篇汇总"
 lead: "万物皆结构，万法归算法"
 disable_comments: false # Optional, disable Disqus comments if true
@@ -22,6 +22,9 @@ draft: true
 > 以算法思想与数据结构为核心，贯穿不同编程语言的实现。这里不问语言门派，只探算法本源。
 ---
 ### 「数据结构篇」· 万物皆结构
+
+#### <span style="color: var(--cinnabar);">📊 「刷题一统春秋」</span>： 
+-  [第一章-链表分治，初露锋芒](/算法数据结构/第一章-链表分治，初露锋芒-/) 
 
 #### <span style="color: var(--cinnabar);">📊 「线性结构」</span>：
 
