--- a/content/算法数据结构/第一章-链表分治，初露锋芒.md
+++ b/content/算法数据结构/第一章-链表分治，初露锋芒.md
@@ -341,6 +341,7 @@ class Solution {
 但...O(n log k) 的解法，足以让魏国军粮调度效率提升数倍！庞涓虽重要，但...
 
 “我...我需要请示魏王。”
+
 “给你三天。”姬玄摆手送客。
 
 【系统】：触发支线任务“挖角庞涓”
@@ -369,7 +370,25 @@ class Solution {
 
 【题目】：二叉树直径
 
-【描述】：给定一棵二叉树，求其直径（任意两节点间最长路径）
+【描述】：给你一棵二叉树的根节点，返回该树的 直径 。
+
+二叉树的 直径 是指树中任意两个节点之间最长路径的 长度 。这条路径可能经过也可能不经过根节点 root 。
+
+两节点之间路径的 长度 由它们之间边数表示。
+
+![水镜](https://assets.leetcode.com/uploads/2021/03/06/diamtree.jpg)
+输入：root = [1,2,3,4,5]
+输出：3
+解释：3 ，取路径 [4,2,1,3] 或 [5,2,1,3] 的长度。
+示例 2：
+
+输入：root = [1,2]
+输出：1
+ 
+提示：
+
+树中节点数目在范围 [1, 104] 内
+-100 <= Node.val <= 100
 
 【特殊要求】：使用递归，但空间复杂度须为 O(1)
 
