增加第二章

--- a/content/算法数据结构/第一章-链表分治，初露锋芒.md
+++ b/content/算法数据结构/第一章-链表分治，初露锋芒.md
@@ -17,7 +17,7 @@ draft: true
 # **第一章：链表分治，初露锋芒**
 
 ---
-
+[◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
 ## **第一幕：算法朝会，秦使发难**
 
 齐国，临淄城，算法殿。
@@ -725,3 +725,4 @@ class Solution {
 如果喜欢这个风格，请告诉我，我会保持这种“每章一道算法题+剧情推进”的模式！
 
 （P.S. 现实中遇到链表问题，真的推荐双指针法，优雅高效！）
+[◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
