--- a/content/算法数据结构/第二章-九章迷宫，群雄逐鹿.md
+++ b/content/算法数据结构/第二章-九章迷宫，群雄逐鹿.md
@@ -1,6 +1,6 @@
 ---
-title: "<<春秋算法>>"
-date: 2025-12-16
+title: "第二章：九章迷宫，群雄逐鹿"
+date: 2025-12-12
 description: "算法数据结构"
 lead: "一眼春秋，望穿风云。"
 disable_comments: false # Optional, disable Disqus comments if true
@@ -150,13 +150,9 @@ draft: true
 空中浮现光幕：
 
 **【第一层：方田最大沃土区】**
-
 **【描述】：给定 M×N 农田矩阵，矩阵元素代表土地肥力（可正可负）】
-
 **【目标】：找出连通矩形区域，使其肥力总和最大】
-
 **【约束】：矩形必须连续，至少包含一格】
-
 **【示例】：**
 ```
 矩阵：
@@ -297,13 +293,21 @@ int maxSubMatrixOptimal(int[][] matrix) {
 四周漆黑，只有前方一点幽光。他走过去，发现是一座**石室**，墙上刻着诡异符文：
 
 **【隐藏层：死锁困境】**
+
 **【触发条件】：在第一层救人，触发仁者机关】
+
 **【描述】：你被困在资源争夺迷阵中】
+
 **【场景】：五国使者争夺三份盟约，每人必须拿到两份才能通关】
+
 **【规则】：**
+
 1. 使者按固定顺序申请盟约
+
 2. 若盟约不足，使者等待
+
 3. 若形成循环等待，则全员死锁
+
 4. 你必须设计“防死锁算法”
 
 石室中央，浮现五个虚影——代表五国使者，以及三卷盟约竹简。
@@ -394,8 +398,11 @@ class 使者 {
 石室墙壁向两侧分开，露出向上阶梯。
 
 【天道奖励】：
+
 【通过隐藏层，获得“死锁免疫”天赋】
+
 【效果：今后任何循环等待困境中，直觉感知危险】
+
 【额外奖励：《操作系统精要·上古卷》】
 
 姬玄拾级而上，心中暗喜：这隐藏层，反倒让他得了大机缘。
@@ -409,8 +416,11 @@ class 使者 {
 这一层竟是**庞大的任务调度殿**。空中悬浮无数光球，每个光球代表一个“算法任务”，光球间有箭头相连，表示依赖关系。
 
 【第四层：任务调度】
+
 【描述】：给定N个任务及其依赖关系，判断能否完成所有任务】
+
 【进阶】：若可完成，给出一种执行顺序】
+
 【实质】：有向图拓扑排序】
 
 姬玄赶到时，已有十余人困在此层。
@@ -501,6 +511,7 @@ List<Integer> topologicalOrder(int numTasks, int[][] prerequisites) {
 但光幕提示：【请给出时间复杂度分析】
 
 庞涓沉吟：“DFS解法，时耗O(V+E)，空耗O(V)。”
+
 芈月道：“BFS亦为O(V+E)，但更易理解输出顺序。”
 
 这时，姬玄走上前。
@@ -567,9 +578,13 @@ class 动态任务调度器 {
 ```
 
 【天道评价】：
+
 **【解题完整度】：100%】
+
 **【算法前瞻性】：考虑动态场景，远超当前需求】
+
 **【额外洞察】：提出“增量环检测”优化】
+
 **【评价：宗师之思】**
 
 光幕绽放七彩光华！比庞涓、芈月的金光更盛！
@@ -635,6 +650,7 @@ class 动态任务调度器 {
 “秦阵共十人，每人有八种攻击变化，总状态数8¹⁰，但...**存在对称性**！”
 
 姬玄眼中数据流转：
+
 “左三右三为对称组，前后四为另一对称组。实际独立状态...仅120种！”
 
 他找到了**状态转移图**中的**关键路径**。
@@ -715,8 +731,11 @@ f(0)=0, f(1)=1
 芈月沉默良久，轻声道：“你和传闻中...不一样。”
 
 “传闻说我是什么？”
+
 “纨绔王子，不学无术，沉迷酒色。”
+
 “那现在呢？”
+
 “...算法天才，心思缜密，而且...”芈月声音渐低，“...有点侠气。”
 
 姬玄笑了。
@@ -736,8 +755,11 @@ f(0)=0, f(1)=1
 庞涓摊手：“别误会，我不是挑拨。只是...天道规则如此。”
 
 果然，光幕浮现：
+
 【第八层入口：仅限一人】
+
 【选择：合作者中，只能有一人晋级】
+
 【另一人：传送出迷宫】
 
 芈月握剑的手紧了紧。
@@ -770,8 +792,11 @@ f(0)=0, f(1)=1
 
 最终，光幕显示：
 **【判定通过】**
+
 **【虚拟合作者成立】**
+
 **【晋级者：姬玄、芈月】**
+
 **【特殊奖励：合作默契+100，获得‘递归双子星’称号】**
 
 两道金光笼罩二人！
@@ -835,7 +860,9 @@ f(0)=0, f(1)=1
 他看向玉简，又看向嬴驷胸前符文...忽然灵光一闪！
 
 “公主！攻他膻中穴下一寸！”
+
 “那是死穴！”
+
 “不！那是他**算法的循环不变式节点**！暴力穷举必须维持不变式，破之则算法崩溃！”
 
 芈月虽不明原理，但信姬玄。
@@ -879,9 +906,13 @@ f(0)=0, f(1)=1
 题目浮现：
 
 **【终极之问】**
+
 **【场景】：你已成算法圣人，可制定天下算法规则】
+
 **【问题】：当个人最优解与天下最优解冲突时，你当如何？】
+
 **【示例】：你若独占《九章算法》，可成天下第一，但若公开，则列国算法水平皆升，整体最优】
+
 **【选择】：独享？分享？】**
 
 姬玄怔住。
@@ -889,9 +920,11 @@ f(0)=0, f(1)=1
 这不是算法题...这是**伦理题**。
 
 他沉思良久，缓缓道：
+
 “晚辈认为...当**分享**。”
 
 “哦？为何？独享可成至强。”
+
 “但至强之后呢？”姬玄抬头，“若天下算法停滞，至强也只是井底之蛙。唯有天下共进，算法之道才能真正发展。”
 
 “况且...”他微微一笑，“真正的强者，不怕分享。因为...他会继续前进，永远领先。”
@@ -905,9 +938,13 @@ f(0)=0, f(1)=1
 玉简光华大盛，融入姬玄眉心！
 
 【系统狂响】：
+
 【获得《九章算法·第一卷》！】
+
 【境界突破：才子境→宗师境！】
+
 【解锁所有卷一算法：方田、粟米、衰分、少广、商功...】
+
 【获得算圣刘徽传承印记！】
 
 现实世界，祭坛上。
@@ -921,6 +958,7 @@ f(0)=0, f(1)=1
 他看向重伤的嬴驷，又看向芈月：“公主，这嬴驷...”
 
 芈月咬牙：“他残害同袍，当诛。”
+
 “但杀了他，秦齐必战。”姬玄沉吟，“不如...废他算法修为，留他一命。”
 
 芈月讶然：“你...”
@@ -956,10 +994,14 @@ f(0)=0, f(1)=1
 回城路上，芈月与姬玄同乘一车。
 
 “你真要公开《九章算法》？”芈月问。
+
 “真。”
 “...我能来学吗？”
+
 “欢迎。”姬玄笑道，“不过要交学费。”
+
 “什么学费？”
+
 “陪我游临淄...上次的赌约，还没兑现呢。”
 
 芈月脸微红，却没拒绝。
@@ -969,6 +1011,7 @@ f(0)=0, f(1)=1
 车内，两人沉默片刻，芈月忽然低声道：“姬玄...谢谢。”
 
 “谢什么？”
+
 “很多。”芈月看向窗外，“在迷宫里，你没抛下我。在第九层...你让我看到了，真正的算法之道，不止是竞争。”
 
 姬玄心中微动。
@@ -1003,18 +1046,27 @@ f(0)=0, f(1)=1
 
 **【下章预告】**
 **第三章：图论杀局，临淄风云**
+
 **核心算法：最短路径 vs 最小割**
+
 **关键冲突：姬玄救父需解“最大流最小割”，途中遭遇庞涓埋伏**
+
 **感情进展：芈月为救姬玄重伤，姬玄首次动怒**
+
 **新危机：齐国内部出现叛徒，与魏国里应外合...**
 
 ---
 
 **【本章算法知识点】**
+
 1. **最大子矩阵和** → 降维+ Kadane算法
+
 2. **死锁与预防** → 资源有序分配法
+
 3. **拓扑排序** → DFS检测环 / BFS(Kahn算法) / 动态维护
+
 4. **递归与记忆化** → 避免栈溢出
+
 5. **暴力算法的优化** → 对称性减少状态空间
 
 （对应LeetCode：85最大矩形、207课程表、509斐波那契记忆化...）
