--- a/content/算法数据结构/算法数据结构-棋谱篇.md
+++ b/content/算法数据结构/算法数据结构-棋谱篇.md
@@ -24,8 +24,12 @@ draft: true
 ### 「数据结构篇」· 万物皆结构
 
 #### <span style="color: var(--cinnabar);">📊 「刷题一统春秋」</span>： 
--  [第一章-链表分治，初露锋芒](/算法数据结构/第一章-链表分治，初露锋芒/) 
+- [第一章-链表分治，初露锋芒](/算法数据结构/第一章-链表分治，初露锋芒/) 
 - [第二章-九章迷宫，群雄逐鹿](/算法数据结构/第二章-九章迷宫，群雄逐鹿/)
+- [第三章-图论杀局，临淄风云](/算法数据结构/第三章-图论杀局，临淄风云/)
+- [第四章-鬼谷出山，动态规划](/算法数据结构/第四章-鬼谷出山，动态规划/)
+- [第五章-系统觉醒，时空乱流](/算法数据结构/第五章-系统觉醒，时空乱流/)
+
 #### <span style="color: var(--cinnabar);">📊 「线性结构」</span>：
 
 ##### 「数组与链表」：内存的连续与离散之美
