调整目录结构

--- a/content/算法数据结构/第一章-链表分治，初露锋芒.md
+++ b/content/算法数据结构/第一章-链表分治，初露锋芒.md
@@ -5,7 +5,7 @@ description: "算法数据结构"
 lead: "一眼春秋，望穿风云。"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
-toc: false # Optional, enable Table of Contents for specific post
+toc: true # Optional, enable Table of Contents for specific post
 mathjax: true # Optional, enable MathJax for specific post
 categories:
   - "算法一统春秋"
@@ -17,7 +17,7 @@ draft: true
 # **第一章：链表分治，初露锋芒**
 
 ---
-[◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
+- [◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
 ## **第一幕：算法朝会，秦使发难**
 
 齐国，临淄城，算法殿。
@@ -377,6 +377,7 @@ class Solution {
 两节点之间路径的 长度 由它们之间边数表示。
 
 ![水镜](https://assets.leetcode.com/uploads/2021/03/06/diamtree.jpg)
+```shell
 输入：root = [1,2,3,4,5]
 输出：3
 解释：3 ，取路径 [4,2,1,3] 或 [5,2,1,3] 的长度。
@@ -384,6 +385,7 @@ class Solution {
 
 输入：root = [1,2]
 输出：1
+```
  
 提示：
 
@@ -733,4 +735,5 @@ class Solution {
 如果喜欢这个风格，请告诉我，我会保持这种“每章一道算法题+剧情推进”的模式！
 
 （P.S. 现实中遇到链表问题，真的推荐双指针法，优雅高效！）
-[◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
+- [第二章-九章迷宫，群雄逐鹿](/算法数据结构/第二章-九章迷宫，群雄逐鹿/)
+- [◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
