--- a/content/算法数据结构/第二章-九章迷宫，群雄逐鹿.md
+++ b/content/算法数据结构/第二章-九章迷宫，群雄逐鹿.md
@@ -5,7 +5,7 @@ description: "算法数据结构"
 lead: "一眼春秋，望穿风云。"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
-toc: false # Optional, enable Table of Contents for specific post
+toc: true # Optional, enable Table of Contents for specific post
 mathjax: true # Optional, enable MathJax for specific post
 categories:
   - "算法一统春秋"
@@ -14,6 +14,7 @@ tags:
 
 draft: true
 ---
+- [第一章-链表分治，初露锋芒](/算法数据结构/第一章-链表分治，初露锋芒/) 
 [◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
 # **第二章：九章迷宫，群雄逐鹿**
 
@@ -1070,4 +1071,6 @@ f(0)=0, f(1)=1
 5. **暴力算法的优化** → 对称性减少状态空间
 
 （对应LeetCode：85最大矩形、207课程表、509斐波那契记忆化...）
+
+- [第三章-图论杀局，临淄风云](/算法数据结构/第三章-图论杀局，临淄风云/)
 [◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
