--- a/content/算法数据结构/第三章-图论杀局，临淄风云.md
+++ b/content/算法数据结构/第三章-图论杀局，临淄风云.md
@@ -5,7 +5,7 @@ description: "算法数据结构"
 lead: "一眼春秋，望穿风云。"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
-toc: false # Optional, enable Table of Contents for specific post
+toc: true # Optional, enable Table of Contents for specific post
 mathjax: true # Optional, enable MathJax for specific post
 categories:
   - "算法一统春秋"
@@ -14,7 +14,11 @@ tags:
 
 draft: true
 ---
-[◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
+
+- [第二章-九章迷宫，群雄逐鹿](/算法数据结构/第二章-九章迷宫，群雄逐鹿/)
+
+- [◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
+
 # **第三章：图论杀局，临淄风云**
 
 ---
@@ -963,4 +967,7 @@ class 递归解毒 {
 6. **二分图匹配**：匈牙利算法
 
 （对应LeetCode：743网络延迟时间、207课程表、200岛屿数量等...）
-[◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
+
+- [第四章-鬼谷出山，动态规划](/算法数据结构/第四章-鬼谷出山，动态规划/)
+
+- [◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
