--- a/content/算法数据结构/第五章-系统觉醒，时空乱流.md
+++ b/content/算法数据结构/第五章-系统觉醒，时空乱流.md
@@ -5,7 +5,7 @@ description: "算法数据结构"
 lead: "一眼春秋，望穿风云。"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
-toc: false # Optional, enable Table of Contents for specific post
+toc: true # Optional, enable Table of Contents for specific post
 mathjax: true # Optional, enable MathJax for specific post
 categories:
   - "算法一统春秋"
@@ -14,7 +14,9 @@ tags:
 
 draft: true
 ---
-[◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
+- [第四章-鬼谷出山，动态规划](/算法数据结构/第四章-鬼谷出山，动态规划/)
+
+- [◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
 # **第五章：系统觉醒，时空乱流**
 
 ---
