--- a/content/算法数据结构/第四章-鬼谷出山，动态规划.md
+++ b/content/算法数据结构/第四章-鬼谷出山，动态规划.md
@@ -5,7 +5,7 @@ description: "算法数据结构"
 lead: "一眼春秋，望穿风云。"
 disable_comments: false # Optional, disable Disqus comments if true
 authorbox: true # Optional, enable authorbox for specific post
-toc: false # Optional, enable Table of Contents for specific post
+toc: true # Optional, enable Table of Contents for specific post
 mathjax: true # Optional, enable MathJax for specific post
 categories:
   - "算法一统春秋"
@@ -14,6 +14,7 @@ tags:
 
 draft: true
 ---
+- [第三章-图论杀局，临淄风云](/算法数据结构/第三章-图论杀局，临淄风云/)
 [◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
 # **第四章：鬼谷出山，动态规划**
 
@@ -694,4 +695,6 @@ else:
 7. **NP完全问题**：旅行商问题（TSP）与近似算法
 
 （对应LeetCode：416分割等和子集、1143最长公共子序列、134加油站、473火柴拼正方形等...）
-[◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
+
+- [第五章-系统觉醒，时空乱流](/算法数据结构/第五章-系统觉醒，时空乱流/)
+- [◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
