增加部署到微信公众号

--- a/content/后端架构/后端架构-兵法篇.md
+++ b/content/后端架构/后端架构-兵法篇.md
@@ -26,6 +26,18 @@ draft: true
 
 ---
 
+### <span style="color: var(--cinnabar);">⚔️ 「架构修仙传」</span>
+
+> 以《凡人修仙传》为蓝本，将软件架构演进与修仙体系完美融合，从单机苦修到云原生飞升，体验架构师的修炼之路。
+
+#### 📚 「修仙章节」
+- [第一章：单机苦修 · 草根启程](/后端架构/第一章-单机苦修·草根启程/) —— 从废弃代码村走出的普通进程，如何在单机环境中修炼成长，掌握Docker容器化，应对数据库死锁、缓存穿透、流量洪峰等挑战
+- [第二章：开宗立派 · 分布式修真](/后端架构/第二章-开宗立派·分布式修真/) —— 从单体到微服务，建立韩门，掌握服务注册发现、配置中心、消息队列，应对分布式天劫
+- [第三章：飞升上界 · 云原生与K8s](/后端架构/第三章-飞升上界·云原生与K8s/) —— 飞升云上仙境，掌握Kubernetes，实现服务的自动调度、扩缩容、自愈，领悟云原生的真谛
+- [第四章：规则入微 · 服务网格](/后端架构/第四章-规则入微·服务网格/) —— 掌握Istio服务网格，实现精细化的服务治理，将通信逻辑下沉为基础设施
+
+---
+
 ### <span style="color: var(--cinnabar);">🎯 「微服务兵法」</span>
 
 #### 🏗️ 「服务拆分艺术」
