--- a/content/算法数据结构/算法数据结构-棋谱篇.md
+++ b/content/算法数据结构/算法数据结构-棋谱篇.md
@@ -15,7 +15,7 @@ tags:
 menu: 
   main:
     weight: 3 # Optional, add page to a menu. Options: main, side, footer
-draft: true
+#draft: true
 ---
 ## 「算法与数据结构真解」
 
