--- a/content/编程语言/编程语言-剑法篇.md
+++ b/content/编程语言/编程语言-剑法篇.md
@@ -15,7 +15,7 @@ tags:
 menu: 
   main:
     weight: 1 # Optional, add page to a menu. Options: main, side, footer
-draft: true
+#draft: true
 ---
 ## 「编程语言兵器谱」
 
