--- a/content/运维部署/运维部署-机关篇.md
+++ b/content/运维部署/运维部署-机关篇.md
@@ -14,7 +14,7 @@ tags:
   - "CI/CD"
   - "监控日志"
   - "云原生"
-draft: true
+#draft: true
 menu: 
   main:
     weight: 2 # Optional, add page to a menu. Options: main, side, footer
