--- a/content/算法数据结构/第四章-鬼谷出山，动态规划.md
+++ b/content/算法数据结构/第四章-鬼谷出山，动态规划.md
@@ -12,7 +12,7 @@ categories:
 tags:
   - "列表"
 
-draft: true
+#draft: true
 ---
 - [第三章-图论杀局，临淄风云](/算法数据结构/第三章-图论杀局，临淄风云/)
 [◀ 返回](/算法数据结构/算法数据结构-棋谱篇/)
