增加部署到公众号

--- a/content/后端架构/第一章-单机苦修·草根启程.md
+++ b/content/后端架构/第一章-单机苦修·草根启程.md
@@ -1,5 +1,5 @@
 ---
-title: "第一章：单机苦修 · 草根启程"
+title: "第一章: 单机苦修 草根启程"
 date: 2025-12-22
 description: "从废弃代码村走出的普通进程，如何在单机环境中修炼成长"
 lead: "灵根资质极差，却得神秘Dockerfile相助，开启架构修仙之路"
