新曾需求文档

--- a/content/开源文档/开源文档-典籍篇.md
+++ b/content/开源文档/开源文档-典籍篇.md
@@ -59,6 +59,10 @@ menu:
 - 计划：多版本文档管理、多语言支持策略
 - [英语语法](/开源文档/英语语法) —— 解决查看文档，不解其意的痛点。
 
+##### 「需求文档」
+- [工单短信触达需求文档](/开源文档/需求文档/工单短信触达) —— DDD领域驱动设计、功能点拆解、单元测试点
+- 计划：需求文档模板、用户故事编写、验收标准定义
+
 ##### 「自动化文档」
 - [CI 集成文档生成](/开源文档/文档编撰/自动化文档) —— Javadoc/Sphinx/Doxygen 实战
 - 计划：API 文档同步、变更日志自动生成、文档测试
