--- a/content/运维部署/运维部署-机关篇.md
+++ b/content/运维部署/运维部署-机关篇.md
@@ -41,6 +41,8 @@ menu:
 #### ☸️ 「Kubernetes 排兵阵」
 ##### 「集群部署与管理」
 - [K8s 集群建设指南](/运维部署/容器化/K8s集群部署) —— 高可用架构、网络插件选型、存储方案
+- [etcd 集群部署详解](/运维部署/容器化/etcd集群部署) —— 集群模式、高可用部署、证书管理与运维故障排查
+
 - 计划：节点管理、资源配额、命名空间规划
 
 ##### 「工作负载编排」
