增加区块链知识

--- a/content/开源文档/开源文档-典籍篇.md
+++ b/content/开源文档/开源文档-典籍篇.md
@@ -76,6 +76,11 @@ menu:
 - [技术图表绘制](/开源文档/文档编撰/视觉化) —— 架构图、流程图、序列图规范
 - 计划：配色方案、图标系统、交互式文档
 
+##### 「技术总结」
+- [区块链技术核心：典当铺的启示](/开源文档/区块链技术-典当铺的启示) —— 双花防御、51%攻击、时间换空间
+- [区块链：将现实世界的"硬度"刻入数字灵魂](/开源文档/区块链-将现实世界的硬度刻入数字灵魂) —— 从增删改查到只能生长，数字世界的哲学实现
+- 计划：核心技术解析、最佳实践总结、案例分析
+
 ---
 
 ### <span style="color: var(--cinnabar);">⚙️ 「代码规范训」</span>
